# term-chameleon

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  STRESS_TEST_FINDINGS.md  pyproject.toml
.github/workflows/: ci.yml  demo.yml  publish.yml
demo/: demo.tape
docs/: README.md  audit-findings-2026-06-27.json  audit-findings-round2-2026-06-27.json  audit-findings-round3-2026-06-27.json  audit-findings-round4-2026-06-27.json  audit-findings-round5.md  design-adaptive-readability.md  implementation-plan.md  product-spec.md  research-perregion-spike.json  research-readability-redesign.json  testing-strategy.md
docs/audit/: ADVERSARIAL_EDGE_CASES.md  AUDIT_SUMMARY.md  EDGE_CASE_ANALYSIS_INDEX.md  EDGE_CASE_TEST_SCENARIOS.py  (+6 more)
scripts/: live-iterm-smoke.sh
tests/: test_adapt.py  test_backdrop.py  test_background_html.py  test_cli.py  test_collision_routing.py  test_color.py  test_config.py  test_demo.py  test_deterministic_check.py  test_diagnostics.py  test_e2e_stage.py  test_extreme_stress.py  test_glassiness_ladder.py  test_images.py  test_install_visual.py  test_iterm_api.py  test_iterm_connection.py  test_iterm_profile.py  test_iterm_window.py  test_live_iterm.py  test_live_stage.py  test_osc.py  test_pixel_contrast.py  test_png.py  test_release_check.py  test_safe_io.py  test_screenshot.py  test_screenshot_test.py  test_setup.py  test_status.py  test_terminal.py  test_terminal_pattern.py  test_text_contrast.py  test_watch.py  test_watch_daemon.py  test_watch_live.py  test_watch_live_cli.py  test_watch_live_dynamic.py
(+65 files in other folders)
