[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "term-chameleon"
version = "0.1.0"
description = "Adaptive contrast/readability toolkit for translucent terminals, starting with iTerm2."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Term Chameleon contributors" }]
keywords = ["terminal", "iterm2", "contrast", "accessibility", "transparency", "osc"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Terminals",
]

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]
iterm = ["iterm2>=2.9"]
visual = ["pillow>=10.0"]

[project.scripts]
term-chameleon = "term_chameleon.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/term_chameleon"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
